# hierarchical-crack-growth-monitoring

./: .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb  demo_classic_fatigue.ipynb  demo_crack_growth_sde.ipynb  demo_modified_paris.ipynb  demo_spectral_fatigue.ipynb
src/: bayesian_models.py  crack_growth_models.py  data_utils.py  output_utils.py  predictive_models.py  visualisation.py
